--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   "license": "ISC",
   "devDependencies": {
     "parcel": "^2.0.0-beta.1"
+  },
+  "dependencies": {
+    "faker": "^5.4.0"
   }
 }
